--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,9 @@
-version: "3"
-
 services:
-  postgres:
-    image: postgres:15-alpine
+  python-app:
+    build:
+      context: .
+    restart: on-failure
     ports:
-      - 5432:5432
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      - "8123:8000"
+    env_file:
+      - .env
